samples/_failures_safe/1761151984_490e43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f2f8797.c: In function ‘main’:
./samples/SAFE/__tmp_1f2f8797.c:133:5: error: expected declaration or statement at end of input
  133 |     int choice;
      |     ^~~
